--- a/src/css/common/util/iconfont.scss
+++ b/src/css/common/util/iconfont.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';
   /* project id 809156 */
-  src: url('../../fonts/iconfont.eot');
-  src: url('../../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/iconfont.woff') format('woff'),
-    url('../../fonts/iconfont.ttf') format('truetype'),
-    url('../../fonts/iconfont.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_809156_vvba1rvpnta.eot');
+  src: url('//at.alicdn.com/t/font_809156_vvba1rvpnta.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_809156_vvba1rvpnta.woff') format('woff'),
+    url('//at.alicdn.com/t/font_809156_vvba1rvpnta.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_809156_vvba1rvpnta.svg#iconfont') format('svg');
 }
 
 .iconfont {
