--- a/src/css/pages/article.scss
+++ b/src/css/pages/article.scss
@@ -6,6 +6,16 @@
   }
 }
 
+.artice-content {
+  color: #383838;
+  line-height: 0.36rem;
+
+  p {
+    margin-top: 0.44rem;
+    padding: 0 0.45rem;
+  }
+}
+
 .share-wrap {
   margin: 0.2rem 0.45rem 0.4rem;
 }
